--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,15 @@
 
 <ul>
   <% @tasks.each do |task| %>
-  <li> <span class="badge badge-pill badge-success"><%= task[:completed] %></span> <%= task[:title] %> (<%= task[:details] %>)</li>
+    <li>
+      <span class="badge badge-pill badge-success">
+        <%= task.completed %>
+      </span>
+      <%= link_to task.title, task_path(task.id) %>
+    </li>
   <% end %>
 </ul>
+
+<span>
+  <%= link_to "Create a new task", new_task_path, class: "btn btn-primary"%>
+</span>
